--- a/package.json
+++ b/package.json
@@ -32,6 +32,8 @@
     "typescript": "5.2.2"
   },
   "devDependencies": {
+    "eslint-config-prettier": "^9.0.0",
+    "prettier": "^3.0.3",
     "prisma": "^5.3.0"
   }
 }
