--- a/.gitignore
+++ b/.gitignore
@@ -25,9 +25,13 @@ yarn-debug.log*
 yarn-error.log*
 
 # local env files
+*.env
 .env
 .env.*
 .env*.local
+docker-env
+dotenv-env
+
 
 # vercel
 .vercel
