--- a/package.json
+++ b/package.json
@@ -3,10 +3,12 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "dotenv -e ./dotenv-env/.env.dev -- next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "prisma:migrate:dev": "dotenv -e ./dotenv-env/.env.dev -- prisma migrate dev",
+    "prisma:migrate:test": "dotenv -e ./dotenv-env/.env.test -- prisma migrate dev"
   },
   "dependencies": {
     "@auth/prisma-adapter": "^1.0.2",
