--- a/package.json
+++ b/package.json
@@ -40,6 +40,8 @@
     "zod": "^3.22.2"
   },
   "devDependencies": {
+    "@biomejs/biome": "1.2.2",
+    "@types/bcrypt": "^5.0.0",
     "eslint-config-prettier": "^9.0.0",
     "prettier": "^3.0.3",
     "prisma": "^5.3.0"
