add javascript specific fules to biome formatter rule

--- a/biome.json
+++ b/biome.json
@@ -1,7 +1,17 @@
 {
+  "linter": {
+    "enabled": true 
+  },
   "formatter": {
     "lineWidth": 80,
     "indentStyle": "space",
     "indentSize": 2
+  },
+  "javascript": {
+    "formatter": {
+      "indentStyle": "space",
+      "jsxQuoteStyle": "single",
+      "semicolons": "asNeeded"
+    }
   }
 }
