--- a/package.json
+++ b/package.json
@@ -25,14 +25,14 @@
     "clsx": "^2.0.0",
     "dotenv-cli": "^7.3.0",
     "eslint": "8.49.0",
-    "eslint-config-next": "^13.5.2",
+    "eslint-config-next": "13.4.19",
     "lucide-react": "^0.276.0",
-    "next": "^13.5.2",
+    "next": "13.4.19",
     "next-auth": "^4.23.1",
     "next-themes": "^0.2.1",
     "postcss": "8.4.29",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
     "react-hook-form": "^7.46.1",
     "tailwind-merge": "^1.14.0",
     "tailwindcss": "3.3.3",
