--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
   "dependencies": {
     "@auth/prisma-adapter": "^1.0.2",
     "@hookform/resolvers": "^3.3.1",
-    "@prisma/client": "^5.3.0",
+    "@prisma/client": "^5.3.1",
     "@radix-ui/react-dropdown-menu": "^2.0.5",
     "@radix-ui/react-label": "^2.0.2",
     "@radix-ui/react-slot": "^1.0.2",
@@ -26,14 +26,14 @@
     "clsx": "^2.0.0",
     "dotenv-cli": "^7.3.0",
     "eslint": "8.49.0",
-    "eslint-config-next": "13.4.19",
+    "eslint-config-next": "^13.5.4",
     "lucide-react": "^0.276.0",
-    "next": "13.4.19",
+    "next": "^13.5.4",
     "next-auth": "^4.23.1",
     "next-themes": "^0.2.1",
-    "postcss": "8.4.29",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
+    "postcss": "^8.4.31",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-hook-form": "^7.46.1",
     "tailwind-merge": "^1.14.0",
     "tailwindcss": "3.3.3",
@@ -46,6 +46,6 @@
     "@types/bcrypt": "^5.0.0",
     "eslint-config-prettier": "^9.0.0",
     "prettier": "^3.0.3",
-    "prisma": "^5.3.0"
+    "prisma": "^5.3.1"
   }
 }
